--- a/Business.Host/Web.config
+++ b/Business.Host/Web.config
@@ -79,16 +79,16 @@
     </serviceHostingEnvironment>
     <services>
       <service name="Business.Challenges.ChallengesService" behaviorConfiguration="DefaultServiceBehaviour">
-        <endpoint address="" binding="wsHttpBinding" contract="Business.Challenges.IChallengesService" />
+        <endpoint address="" binding="basicHttpBinding" contract="Business.Challenges.IChallengesService" />
       </service>
       <service name="Business.Identity.IdentityService" behaviorConfiguration="DefaultServiceBehaviour">
-        <endpoint address="" binding="wsHttpBinding" contract="Business.Identity.IIdentityService" />
+        <endpoint address="" binding="basicHttpBinding" contract="Business.Identity.IIdentityService" />
       </service>
       <service name="Business.Achievements.AchievementsService" behaviorConfiguration="DefaultServiceBehaviour">
-        <endpoint address="" binding="wsHttpBinding" contract="Business.Achievements.IAchievementsService" />
+        <endpoint address="" binding="basicHttpBinding" contract="Business.Achievements.IAchievementsService" />
       </service>
       <service name="Business.SearchIndex.SearchIndexService" behaviorConfiguration="DefaultServiceBehaviour">
-        <endpoint address="" binding="wsHttpBinding" contract="Business.SearchIndex.ISearchIndexService" />
+        <endpoint address="" binding="basicHttpBinding" contract="Business.SearchIndex.ISearchIndexService" />
       </service>
     </services>
     <behaviors>
