--- a/Presentation/Presentation.Web/appsettings.json
+++ b/Presentation/Presentation.Web/appsettings.json
@@ -1,11 +1,15 @@
 {
-    "BusinessAddress": "http://localhost:64242/",
-    "Logging": {
-        "IncludeScopes": false,
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
+  "JwtIssuerOptions": {
+    "Issuer": "ChallengingChallenges",
+    "Audience": "http://localhost:5000/"
+  },
+  "BusinessAddress": "http://localhost:64242/",
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
+  }
 }
