--- a/Presentation/Presentation.Web/ClientApp/.vscode/launch.json
+++ b/Presentation/Presentation.Web/ClientApp/.vscode/launch.json
@@ -1,6 +1,26 @@
 {
     "version": "0.2.0",
     "configurations": [
-    
+        {
+            "name": "Launch localhost",
+            "type": "chrome",
+            "request": "launch",
+            "url": "http://localhost:5000/",
+            "webRoot": "${workspaceRoot}/",
+            "skipFiles": [
+                "vendor.js"
+            ]
+        },
+        {
+            "name": "Attach localhost",
+            "type": "chrome",
+            "request": "attach",
+            "port": 9222,
+            "url": "http://localhost:5000/*",
+            "webRoot": "${workspaceRoot}/",
+            "skipFiles": [
+                "vendor.js"
+            ]
+        }
     ]
 }
