--- a/Presentation/Presentation.Web/package.json
+++ b/Presentation/Presentation.Web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Angular2Spa",
+  "name": "ChallengingChallenges",
   "version": "0.0.0",
   "dependencies": {
     "@angular/common": "2.0.2",
@@ -12,6 +12,7 @@
     "@angular/platform-server": "2.0.2",
     "@angular/router": "3.0.2",
     "@types/node": "^6.0.42",
+    "@angular/material": "2.0.0-beta.1",
     "angular2-platform-node": "~2.0.11",
     "angular2-template-loader": "^0.6.0",
     "angular2-universal": "~2.0.11",
@@ -43,6 +44,9 @@
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1",
     "zone.js": "^0.6.25",
-    "angular2-router-loader": "0.3.4"
+    "angular2-router-loader": "0.3.4",
+    "font-awesome": "4.7.0",
+    "primeng": "2.0.0-rc.2",
+    "angular2-jwt": "0.1.28" 
   }
 }
