--- a/Presentation/Presentation.Web/project.json
+++ b/Presentation/Presentation.Web/project.json
@@ -20,7 +20,9 @@
     "Autofac": "4.3.0",
     "Autofac.Extensions.DependencyInjection": "4.0.0",
     "Autofac.Wcf": "4.0.0",
-    "Microsoft.AspNetCore.Identity": "1.1.0"
+    "Microsoft.AspNetCore.Identity": "1.1.0",
+    "System.IdentityModel.Tokens.Jwt": "5.1.2",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0"
   },
 
   "tools": {
