--- a/Presentation/Presentation.Web/package.json
+++ b/Presentation/Presentation.Web/package.json
@@ -2,51 +2,51 @@
   "name": "ChallengingChallenges",
   "version": "0.0.0",
   "dependencies": {
-    "@angular/common": "2.0.2",
-    "@angular/compiler": "2.0.2",
-    "@angular/core": "2.0.2",
-    "@angular/forms": "2.0.2",
-    "@angular/http": "2.0.2",
-    "@angular/platform-browser": "2.0.2",
-    "@angular/platform-browser-dynamic": "2.0.2",
-    "@angular/platform-server": "2.0.2",
-    "@angular/router": "3.0.2",
-    "@types/node": "^6.0.42",
+    "@angular/common": "2.4.6",
+    "@angular/compiler": "2.4.6",
+    "@angular/core": "2.4.6",
+    "@angular/forms": "2.4.6",
+    "@angular/http": "2.4.6",
     "@angular/material": "2.0.0-beta.1",
+    "@angular/platform-browser": "2.4.6",
+    "@angular/platform-browser-dynamic": "2.4.6",
+    "@angular/platform-server": "2.4.6",
+    "@angular/router": "3.4.6",
+    "@types/node": "^6.0.42",
+    "angular2-jwt": "0.1.28",
     "angular2-platform-node": "~2.0.11",
+    "angular2-router-loader": "0.3.4",
     "angular2-template-loader": "^0.6.0",
     "angular2-universal": "~2.0.11",
+    "angular2-universal-patch": "^0.2.1",
     "angular2-universal-polyfills": "~2.0.11",
     "aspnet-prerendering": "^2.0.0",
     "aspnet-webpack": "^1.0.17",
+    "awesome-typescript-loader": "3.0.0-beta.18 || ^3.0.0",
     "bootstrap": "^3.3.7",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-shim": "^0.35.1",
     "event-source-polyfill": "^0.0.7",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "^0.9.0",
+    "font-awesome": "4.7.0",
     "html-loader": "^0.4.4",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
-    "node-noop": "^1.0.0",
     "preboot": "^4.5.2",
+    "primeng": "2.0.0-rc.2",
     "raw-loader": "^0.5.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.1.0",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
-    "ts-loader": "^0.8.2",
     "typescript": "^2.0.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
+    "webpack": "^2.2.1",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1",
-    "zone.js": "^0.6.25",
-    "angular2-router-loader": "0.3.4",
-    "font-awesome": "4.7.0",
-    "primeng": "2.0.0-rc.2",
-    "angular2-jwt": "0.1.28" 
+    "zone.js": "0.7.6"
   }
 }
