--- a/Presentation/Presentation.Web/package.json
+++ b/Presentation/Presentation.Web/package.json
@@ -7,13 +7,13 @@
     "@angular/core": "2.4.6",
     "@angular/forms": "2.4.6",
     "@angular/http": "2.4.6",
-    "@angular/material": "2.0.0-beta.1",
     "@angular/platform-browser": "2.4.6",
     "@angular/platform-browser-dynamic": "2.4.6",
     "@angular/platform-server": "2.4.6",
     "@angular/router": "3.4.6",
     "@types/node": "^6.0.42",
     "angular2-jwt": "0.1.28",
+    "angular2-mdl": "^2.13.0",
     "angular2-platform-node": "~2.0.11",
     "angular2-router-loader": "0.3.4",
     "angular2-template-loader": "^0.6.0",
