--- a/Business.Host/Web.config
+++ b/Business.Host/Web.config
@@ -14,9 +14,13 @@
     <add name="ChallengesConnection" connectionString="Data Source=mssql4.gear.host;Initial Catalog=ccchallenges;Persist Security Info=True;User ID=ccchallenges;Password=Xa330_!3H3F7" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <!--Local strings-->
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="IdentityConnection" connectionString="Data Source=NIKITA-PC;Initial Catalog=CC_Identity;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
     <add name="ChallengesConnection" connectionString="Data Source=NIKITA-PC;Initial Catalog=CC_Challenges;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+  <connectionStrings>
+    <add name="IdentityConnection" connectionString="Data Source=DMITRIEVN2;Initial Catalog=CC_Identity;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
+    <add name="ChallengesConnection" connectionString="Data Source=DMITRIEVN2;Initial Catalog=CC_Challenges;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
