--- a/Presentation/Presentation.Web/.vscode/launch.json
+++ b/Presentation/Presentation.Web/.vscode/launch.json
@@ -2,6 +2,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to Process",
+            "processId": "${command.PickProcess}",
+            "port": 5858
+        },
+        {
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
@@ -37,6 +44,13 @@
             "type": "coreclr",
             "request": "attach",
             "processId": "${command.pickProcess}"
-        }
+        },
+        {
+            "name": "Launch CHROME",
+            "type": "chrome",
+            "request": "launch",
+            "sourceMaps": true,
+            "file": "http://localhost:5000/home"
+        },
     ]
 }
