--- a/Presentation/Presentation.Web/package.json
+++ b/Presentation/Presentation.Web/package.json
@@ -11,7 +11,10 @@
     "@angular/platform-browser-dynamic": "2.4.6",
     "@angular/platform-server": "2.4.6",
     "@angular/router": "3.4.6",
+    "@angular2-mdl-ext/popover": "^0.5.0",
+    "@angular2-mdl-ext/select": "^0.8.2",
     "@types/node": "^6.0.42",
+    "angular-tag-cloud-module": "0.0.4",
     "angular2-jwt": "0.1.28",
     "angular2-mdl": "^2.13.0",
     "angular2-notifications": "^0.4.53",
@@ -31,11 +34,12 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "^0.9.0",
-    "font-awesome": "4.7.0",
     "html-loader": "^0.4.4",
     "isomorphic-fetch": "^2.2.1",
+    "jqcloud2": "^2.0.2",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
+    "marked": "^0.3.6",
     "ng2-pagination": "^2.0.0",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
