--- a/Presentation/Presentation.Web/project.json
+++ b/Presentation/Presentation.Web/project.json
@@ -1,29 +1,30 @@
 {
-  "dependencies": {
-    "Microsoft.AspNetCore.Diagnostics": "1.1.0",
-    "Microsoft.AspNetCore.Mvc": "1.1.0",
-    "Microsoft.AspNetCore.Razor.Tools": {
-      "version": "1.0.0-preview2-final",
-      "type": "build"
+    "dependencies": {
+        "Microsoft.AspNetCore.Diagnostics": "1.1.0",
+        "Microsoft.AspNetCore.Mvc": "1.1.0",
+        "Microsoft.AspNetCore.Razor.Tools": {
+            "version": "1.0.0-preview2-final",
+            "type": "build"
+        },
+        "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
+        "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
+        "Microsoft.AspNetCore.SpaServices": "1.1.0-*",
+        "Microsoft.AspNetCore.StaticFiles": "1.1.0",
+        "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
+        "Microsoft.Extensions.Configuration.Json": "1.1.0",
+        "Microsoft.Extensions.Configuration.CommandLine": "1.1.0",
+        "Microsoft.Extensions.Logging": "1.1.0",
+        "Microsoft.Extensions.Logging.Console": "1.1.0",
+        "Microsoft.Extensions.Logging.Debug": "1.1.0",
+        "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
+        "Autofac": "4.3.0",
+        "Autofac.Extensions.DependencyInjection": "4.0.0",
+        "Autofac.Wcf": "4.0.0",
+        "Microsoft.AspNetCore.Identity": "1.1.0",
+        "System.IdentityModel.Tokens.Jwt": "5.1.2",
+        "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0",
+        "Serilog.Extensions.Logging.File": "1.0.0" 
     },
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
-    "Microsoft.AspNetCore.SpaServices": "1.1.0-*",
-    "Microsoft.AspNetCore.StaticFiles": "1.1.0",
-    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
-    "Microsoft.Extensions.Configuration.Json": "1.1.0",
-    "Microsoft.Extensions.Configuration.CommandLine": "1.1.0",
-    "Microsoft.Extensions.Logging": "1.1.0",
-    "Microsoft.Extensions.Logging.Console": "1.1.0",
-    "Microsoft.Extensions.Logging.Debug": "1.1.0",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
-    "Autofac": "4.3.0",
-    "Autofac.Extensions.DependencyInjection": "4.0.0",
-    "Autofac.Wcf": "4.0.0",
-    "Microsoft.AspNetCore.Identity": "1.1.0",
-    "System.IdentityModel.Tokens.Jwt": "5.1.2",
-    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0"
-  },
 
   "tools": {
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
