--- a/Tests/Business.Tests/packages.config
+++ b/Tests/Business.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="4.3.0" targetFramework="net46" />
   <package id="Autofac.Extras.Moq" version="4.0.0" targetFramework="net46" />
+  <package id="AutoMapper" version="5.2.0" targetFramework="net46" />
   <package id="FluentAssertions" version="4.18.0" targetFramework="net46" />
   <package id="Moq" version="4.2.1312.1622" targetFramework="net46" />
 </packages>
