localization and job

--- a/Presentation/Presentation.Web/appsettings.json
+++ b/Presentation/Presentation.Web/appsettings.json
@@ -1,15 +1,18 @@
 {
-  "JwtIssuerOptions": {
-    "Issuer": "ChallengingChallenges",
-    "Audience": "http://localhost:5000/"
-  },
-  "BusinessAddress": "http://localhost:64242/",
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+    "ConnectionStrings": {
+        "IdentityConnection": "Data Source=DMITRIEVN2;Initial Catalog=CC_Identity;Integrated Security=True;Pooling=False"
+    },
+    "JwtIssuerOptions": {
+        "Issuer": "ChallengingChallenges",
+        "Audience": "http://localhost:5000/"
+    },
+    "BusinessAddress": "http://localhost:64242/",
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
     }
-  }
 }
