--- a/Presentation/Presentation.Web/package.json
+++ b/Presentation/Presentation.Web/package.json
@@ -14,6 +14,7 @@
     "@angular2-mdl-ext/popover": "^0.5.0",
     "@angular2-mdl-ext/select": "^0.8.2",
     "@types/node": "^6.0.42",
+    "angular-l10n": "^2.0.3",
     "angular-tag-cloud-module": "0.0.4",
     "angular2-jwt": "0.1.28",
     "angular2-mdl": "^2.13.0",
