--- a/Presentation/Presentation.Web/project.json
+++ b/Presentation/Presentation.Web/project.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
         "Microsoft.AspNetCore.Diagnostics": "1.1.0",
-        "Microsoft.AspNetCore.Mvc": "1.1.0",
+        "Microsoft.AspNetCore.Mvc": "1.1.1",
         "Microsoft.AspNetCore.Razor.Tools": {
             "version": "1.0.0-preview2-final",
             "type": "build"
@@ -22,8 +22,13 @@
         "Autofac.Wcf": "4.0.0",
         "Microsoft.AspNetCore.Identity": "1.1.0",
         "System.IdentityModel.Tokens.Jwt": "5.1.2",
-        "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0",
-        "Serilog.Extensions.Logging.File": "1.0.0" 
+        "Microsoft.AspNetCore.Authentication.JwtBearer": "1.1.0",
+        "Serilog.Extensions.Logging.File": "1.0.0",
+        "Hangfire": "1.6.8",
+        "Hangfire.Core": "1.6.8",
+        "Hangfire.AspNetCore": "1.6.8",
+        "Hangfire.SqlServer": "1.6.8",
+        "Hangfire.Autofac": "2.2.0"
     },
 
   "tools": {
