--- a/Presentation/Presentation.Web/.gitignore
+++ b/Presentation/Presentation.Web/.gitignore
@@ -30,6 +30,7 @@ Obj/
 # Visual Studio 2015 cache/options directory
 .vs/
 /wwwroot/dist/**
+/wwwroot/assets/**
 /ClientApp/dist/**
 
 # Workaround for https://github.com/aspnet/JavaScriptServices/issues/235
