--- a/Tests/Business.Tests/Business.Tests.csproj
+++ b/Tests/Business.Tests/Business.Tests.csproj
@@ -70,19 +70,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Business.Challenges\Business.Challenges.csproj">
+    <ProjectReference Include="..\..\Business\Challenges\Business.Challenges.csproj">
       <Project>{532F5E1B-117C-4131-A9A7-8B96B3CEE237}</Project>
       <Name>Business.Challenges</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Business.CodeExecution\Business.CodeExecution.csproj">
+    <ProjectReference Include="..\..\Business\CodeExecution\Business.CodeExecution.csproj">
       <Project>{96305162-A7C2-4E9B-ADB3-D9B0946874EB}</Project>
       <Name>Business.CodeExecution</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Business.Identity\Business.Identity.csproj">
+    <ProjectReference Include="..\..\Business\Identity\Business.Identity.csproj">
       <Project>{B248D183-63B4-41F6-8182-E532200D5AEE}</Project>
       <Name>Business.Identity</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Business.SearchIndex\Business.SearchIndex.csproj">
+    <ProjectReference Include="..\..\Business\SearchIndex\Business.SearchIndex.csproj">
       <Project>{B25C08CC-9015-4AFB-B6B8-BDBCFABA9074}</Project>
       <Name>Business.SearchIndex</Name>
     </ProjectReference>
