--- a/Business/Achievements/Business.Achievements.csproj
+++ b/Business/Achievements/Business.Achievements.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B248D183-63B4-41F6-8182-E532200D5AEE}</ProjectGuid>
+    <ProjectGuid>{37C92161-45C9-481B-90A1-821007185720}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Business.Identity</RootNamespace>
-    <AssemblyName>Business.Identity</AssemblyName>
+    <RootNamespace>Business.Achievements</RootNamespace>
+    <AssemblyName>Business.Achievements</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,12 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -50,30 +46,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IdentityService.cs" />
-    <Compile Include="IIdentityService.cs" />
-    <Compile Include="Mappings\IdentityMapProfile.cs" />
+    <Compile Include="AchievementsService.cs" />
+    <Compile Include="IAchievementsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\IdentityRole.cs" />
-    <Compile Include="ViewModels\IdentityUser.cs" />
-    <Compile Include="ViewModels\UserTopViewModel.cs" />
+    <Compile Include="ViewModels\AchievementType.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Data.Common\Data.Common.csproj">
+    <ProjectReference Include="..\Challenges\Business.Challenges.csproj">
+      <Project>{532F5E1B-117C-4131-A9A7-8B96B3CEE237}</Project>
+      <Name>Business.Challenges</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Data.Common\Data.Common.csproj">
       <Project>{610FE3E7-21B8-4BBD-865F-32EA6BA15784}</Project>
       <Name>Data.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Data.Identity\Data.Identity.csproj">
+    <ProjectReference Include="..\..\Data.Identity\Data.Identity.csproj">
       <Project>{6780FCD1-1B0C-4410-94B7-91C98B2333A1}</Project>
       <Name>Data.Identity</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Shared.Framework\Shared.Framework.csproj">
+    <ProjectReference Include="..\..\Shared.Framework\Shared.Framework.csproj">
       <Project>{150EBD2E-0220-4E95-A42E-A5E14E0DB467}</Project>
       <Name>Shared.Framework</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
