--- a/Business/CodeExecution/Business.CodeExecution.csproj
+++ b/Business/CodeExecution/Business.CodeExecution.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37C92161-45C9-481B-90A1-821007185720}</ProjectGuid>
+    <ProjectGuid>{96305162-A7C2-4E9B-ADB3-D9B0946874EB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Business.Achievements</RootNamespace>
-    <AssemblyName>Business.Achievements</AssemblyName>
+    <RootNamespace>Business.CodeExecution</RootNamespace>
+    <AssemblyName>Business.CodeExecution</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,13 +31,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    <Reference Include="Autofac, Version=4.3.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.4.3.0\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.4.9.5, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,31 +53,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AchievementsService.cs" />
-    <Compile Include="IAchievementsService.cs" />
+    <Compile Include="BusinessCodeExecutionModule.cs" />
+    <Compile Include="CodeExecutor.cs" />
+    <Compile Include="ICodeExecutor.cs" />
+    <Compile Include="Private\CodeExecutionRequestData.cs" />
+    <Compile Include="Private\CodeExecutionStatus.cs" />
+    <Compile Include="Private\CookieAwareWebClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\AchievementType.cs" />
+    <Compile Include="ViewModels\CodeExecutionRequest.cs" />
+    <Compile Include="ViewModels\CodeExecutionResponse.cs" />
+    <Compile Include="ViewModels\CodeLanguage.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Business.Challenges\Business.Challenges.csproj">
-      <Project>{532F5E1B-117C-4131-A9A7-8B96B3CEE237}</Project>
-      <Name>Business.Challenges</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Data.Common\Data.Common.csproj">
-      <Project>{610FE3E7-21B8-4BBD-865F-32EA6BA15784}</Project>
-      <Name>Data.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Data.Identity\Data.Identity.csproj">
-      <Project>{6780FCD1-1B0C-4410-94B7-91C98B2333A1}</Project>
-      <Name>Data.Identity</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Shared.Framework\Shared.Framework.csproj">
-      <Project>{150EBD2E-0220-4E95-A42E-A5E14E0DB467}</Project>
-      <Name>Shared.Framework</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
