--- a/Business/Identity/Business.Identity.csproj
+++ b/Business/Identity/Business.Identity.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{96305162-A7C2-4E9B-ADB3-D9B0946874EB}</ProjectGuid>
+    <ProjectGuid>{B248D183-63B4-41F6-8182-E532200D5AEE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Business.CodeExecution</RootNamespace>
-    <AssemblyName>Business.CodeExecution</AssemblyName>
+    <RootNamespace>Business.Identity</RootNamespace>
+    <AssemblyName>Business.Identity</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,20 +31,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.3.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.4.3.0\lib\net45\Autofac.dll</HintPath>
+    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="HtmlAgilityPack, Version=1.4.9.5, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,19 +50,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BusinessCodeExecutionModule.cs" />
-    <Compile Include="CodeExecutor.cs" />
-    <Compile Include="ICodeExecutor.cs" />
-    <Compile Include="Private\CodeExecutionRequestData.cs" />
-    <Compile Include="Private\CodeExecutionStatus.cs" />
-    <Compile Include="Private\CookieAwareWebClient.cs" />
+    <Compile Include="IdentityService.cs" />
+    <Compile Include="IIdentityService.cs" />
+    <Compile Include="Mappings\IdentityMapProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\CodeExecutionRequest.cs" />
-    <Compile Include="ViewModels\CodeExecutionResponse.cs" />
-    <Compile Include="ViewModels\CodeLanguage.cs" />
+    <Compile Include="ViewModels\IdentityRole.cs" />
+    <Compile Include="ViewModels\IdentityUser.cs" />
+    <Compile Include="ViewModels\UserTopViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data.Common\Data.Common.csproj">
+      <Project>{610FE3E7-21B8-4BBD-865F-32EA6BA15784}</Project>
+      <Name>Data.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Data.Identity\Data.Identity.csproj">
+      <Project>{6780FCD1-1B0C-4410-94B7-91C98B2333A1}</Project>
+      <Name>Data.Identity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Shared.Framework\Shared.Framework.csproj">
+      <Project>{150EBD2E-0220-4E95-A42E-A5E14E0DB467}</Project>
+      <Name>Shared.Framework</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
