--- a/Presentation/Presentation.Web/package.json
+++ b/Presentation/Presentation.Web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ChallengingChallenges",
+  "name": "challenging-challenges",
   "version": "0.0.0",
   "dependencies": {
     "@angular/common": "2.4.6",
@@ -13,6 +13,7 @@
     "@angular/router": "3.4.6",
     "@angular2-mdl-ext/popover": "^0.5.0",
     "@angular2-mdl-ext/select": "^0.8.2",
+    "@swimlane/ngx-datatable": "^6.1.2",
     "@types/node": "^6.0.42",
     "angular-l10n": "^2.0.3",
     "angular-tag-cloud-module": "0.0.4",
