--- a/Presentation/Presentation.Web/project.fragment.lock.json
+++ b/Presentation/Presentation.Web/project.fragment.lock.json
@@ -8,21 +8,21 @@
         "bin/Business.Host.dll": {}
       },
       "runtime": {
-        "../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
-        "../packages/Autofac.4.3.0/lib/net45/Autofac.dll": {},
-        "../packages/Autofac.Mvc5.4.0.0/lib/net451/Autofac.Integration.Mvc.dll": {},
-        "../packages/Autofac.Wcf.4.0.0/lib/net45/Autofac.Integration.Wcf.dll": {},
-        "../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.SqlServer.dll": {},
-        "../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.dll": {},
-        "../packages/Microsoft.AspNet.Mvc.5.2.3/lib/net45/System.Web.Mvc.dll": {},
-        "../packages/Microsoft.AspNet.Razor.3.2.3/lib/net45/System.Web.Razor.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.Helpers.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Deployment.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Razor.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.dll": {},
-        "../packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3/lib/net45/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll": {},
-        "../packages/Microsoft.Web.Infrastructure.1.0.0.0/lib/net40/Microsoft.Web.Infrastructure.dll": {},
-        "../packages/Owin.1.0/lib/net40/Owin.dll": {},
+        "../../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
+        "../../packages/Autofac.4.3.0/lib/net45/Autofac.dll": {},
+        "../../packages/Autofac.Mvc5.4.0.0/lib/net451/Autofac.Integration.Mvc.dll": {},
+        "../../packages/Autofac.Wcf.4.0.0/lib/net45/Autofac.Integration.Wcf.dll": {},
+        "../../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.SqlServer.dll": {},
+        "../../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.dll": {},
+        "../../packages/Microsoft.AspNet.Mvc.5.2.3/lib/net45/System.Web.Mvc.dll": {},
+        "../../packages/Microsoft.AspNet.Razor.3.2.3/lib/net45/System.Web.Razor.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.Helpers.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Deployment.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Razor.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.dll": {},
+        "../../packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3/lib/net45/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll": {},
+        "../../packages/Microsoft.Web.Infrastructure.1.0.0.0/lib/net40/Microsoft.Web.Infrastructure.dll": {},
+        "../../packages/Owin.1.0/lib/net40/Owin.dll": {},
         "bin/Business.Host.dll": {}
       },
       "contentFiles": {
@@ -40,7 +40,7 @@
         "bin/Debug/Business.Achievements.dll": {}
       },
       "runtime": {
-        "../packages/Microsoft.AspNet.Identity.Core.2.2.1/lib/net45/Microsoft.AspNet.Identity.Core.dll": {},
+        "../../packages/Microsoft.AspNet.Identity.Core.2.2.1/lib/net45/Microsoft.AspNet.Identity.Core.dll": {},
         "bin/Debug/Business.Achievements.dll": {}
       },
       "contentFiles": {
@@ -58,18 +58,18 @@
         "bin/Debug/Business.Challenges.dll": {}
       },
       "runtime": {
-        "../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
-        "../packages/Autofac.4.3.0/lib/net45/Autofac.dll": {},
-        "../packages/Lucene.Net.3.0.3/lib/NET40/Lucene.Net.dll": {},
-        "../packages/Microsoft.AspNet.Identity.Core.2.2.1/lib/net45/Microsoft.AspNet.Identity.Core.dll": {},
-        "../packages/Microsoft.AspNet.Mvc.5.2.3/lib/net45/System.Web.Mvc.dll": {},
-        "../packages/Microsoft.AspNet.Razor.3.2.3/lib/net45/System.Web.Razor.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.Helpers.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Deployment.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Razor.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.dll": {},
-        "../packages/Microsoft.Web.Infrastructure.1.0.0.0/lib/net40/Microsoft.Web.Infrastructure.dll": {},
-        "../packages/SharpZipLib.0.86.0/lib/20/ICSharpCode.SharpZipLib.dll": {},
+        "../../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
+        "../../packages/Autofac.4.3.0/lib/net45/Autofac.dll": {},
+        "../../packages/Lucene.Net.3.0.3/lib/NET40/Lucene.Net.dll": {},
+        "../../packages/Microsoft.AspNet.Identity.Core.2.2.1/lib/net45/Microsoft.AspNet.Identity.Core.dll": {},
+        "../../packages/Microsoft.AspNet.Mvc.5.2.3/lib/net45/System.Web.Mvc.dll": {},
+        "../../packages/Microsoft.AspNet.Razor.3.2.3/lib/net45/System.Web.Razor.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.Helpers.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Deployment.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Razor.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.dll": {},
+        "../../packages/Microsoft.Web.Infrastructure.1.0.0.0/lib/net40/Microsoft.Web.Infrastructure.dll": {},
+        "../../packages/SharpZipLib.0.86.0/lib/20/ICSharpCode.SharpZipLib.dll": {},
         "bin/Debug/Business.Challenges.dll": {}
       },
       "contentFiles": {
@@ -87,9 +87,9 @@
         "bin/Debug/Business.CodeExecution.dll": {}
       },
       "runtime": {
-        "../packages/Autofac.4.3.0/lib/net45/Autofac.dll": {},
-        "../packages/HtmlAgilityPack.1.4.9.5/lib/Net45/HtmlAgilityPack.dll": {},
-        "../packages/Newtonsoft.Json.9.0.1/lib/net45/Newtonsoft.Json.dll": {},
+        "../../packages/Autofac.4.3.0/lib/net45/Autofac.dll": {},
+        "../../packages/HtmlAgilityPack.1.4.9.5/lib/Net45/HtmlAgilityPack.dll": {},
+        "../../packages/Newtonsoft.Json.9.0.1/lib/net45/Newtonsoft.Json.dll": {},
         "bin/Debug/Business.CodeExecution.dll": {}
       },
       "contentFiles": {
@@ -107,8 +107,8 @@
         "bin/Debug/Business.Identity.dll": {}
       },
       "runtime": {
-        "../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
-        "../packages/Microsoft.AspNet.Identity.Core.2.2.1/lib/net45/Microsoft.AspNet.Identity.Core.dll": {},
+        "../../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
+        "../../packages/Microsoft.AspNet.Identity.Core.2.2.1/lib/net45/Microsoft.AspNet.Identity.Core.dll": {},
         "bin/Debug/Business.Identity.dll": {}
       },
       "contentFiles": {
@@ -126,18 +126,18 @@
         "bin/Debug/Business.SearchIndex.dll": {}
       },
       "runtime": {
-        "../packages/Antlr.3.4.1.9004/lib/Antlr3.Runtime.dll": {},
-        "../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
-        "../packages/Lucene.Net.3.0.3/lib/NET40/Lucene.Net.dll": {},
-        "../packages/Microsoft.AspNet.Razor.3.2.3/lib/net45/System.Web.Razor.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.Helpers.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Deployment.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Razor.dll": {},
-        "../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.dll": {},
-        "../packages/Microsoft.Web.Infrastructure.1.0.0.0/lib/net40/Microsoft.Web.Infrastructure.dll": {},
-        "../packages/Newtonsoft.Json.9.0.1/lib/net45/Newtonsoft.Json.dll": {},
-        "../packages/SharpZipLib.0.86.0/lib/20/ICSharpCode.SharpZipLib.dll": {},
-        "../packages/WebGrease.1.5.2/lib/WebGrease.dll": {},
+        "../../packages/Antlr.3.4.1.9004/lib/Antlr3.Runtime.dll": {},
+        "../../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
+        "../../packages/Lucene.Net.3.0.3/lib/NET40/Lucene.Net.dll": {},
+        "../../packages/Microsoft.AspNet.Razor.3.2.3/lib/net45/System.Web.Razor.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.Helpers.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Deployment.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Razor.dll": {},
+        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.dll": {},
+        "../../packages/Microsoft.Web.Infrastructure.1.0.0.0/lib/net40/Microsoft.Web.Infrastructure.dll": {},
+        "../../packages/Newtonsoft.Json.9.0.1/lib/net45/Newtonsoft.Json.dll": {},
+        "../../packages/SharpZipLib.0.86.0/lib/20/ICSharpCode.SharpZipLib.dll": {},
+        "../../packages/WebGrease.1.5.2/lib/WebGrease.dll": {},
         "bin/Debug/Business.SearchIndex.dll": {}
       },
       "contentFiles": {
