--- a/Data/Challenges/Data.Challenges.csproj
+++ b/Data/Challenges/Data.Challenges.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Context\IChallengesUnitOfWork.cs" />
+    <Compile Include="Repositories\ChallengeQueryParameters.cs" />
+    <Compile Include="Repositories\ChallengesRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
