--- a/Presentation/Web/project.fragment.lock.json
+++ b/Presentation/Web/project.fragment.lock.json
@@ -37,15 +37,16 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Shared.Framework.dll": {}
+        "bin/Release/Shared.Framework.dll": {}
       },
       "runtime": {
         "../../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
+        "../../packages/Autofac.4.3.0/lib/net45/Autofac.dll": {},
         "../../packages/Newtonsoft.Json.9.0.1/lib/net45/Newtonsoft.Json.dll": {},
-        "bin/Debug/Shared.Framework.dll": {}
+        "bin/Release/Shared.Framework.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Shared.Framework.pdb": {
+        "bin/Release/Shared.Framework.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -56,14 +57,14 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Business.Achievements.dll": {}
+        "bin/Release/Business.Achievements.dll": {}
       },
       "runtime": {
         "../../packages/Microsoft.AspNet.Identity.Core.2.2.1/lib/net45/Microsoft.AspNet.Identity.Core.dll": {},
-        "bin/Debug/Business.Achievements.dll": {}
+        "bin/Release/Business.Achievements.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Business.Achievements.pdb": {
+        "bin/Release/Business.Achievements.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -74,7 +75,7 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Business.Challenges.dll": {}
+        "bin/Release/Business.Challenges.dll": {}
       },
       "runtime": {
         "../../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
@@ -89,10 +90,10 @@
         "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.dll": {},
         "../../packages/Microsoft.Web.Infrastructure.1.0.0.0/lib/net40/Microsoft.Web.Infrastructure.dll": {},
         "../../packages/SharpZipLib.0.86.0/lib/20/ICSharpCode.SharpZipLib.dll": {},
-        "bin/Debug/Business.Challenges.dll": {}
+        "bin/Release/Business.Challenges.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Business.Challenges.pdb": {
+        "bin/Release/Business.Challenges.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -103,16 +104,16 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Business.CodeExecution.dll": {}
+        "bin/Release/Business.CodeExecution.dll": {}
       },
       "runtime": {
         "../../packages/Autofac.4.3.0/lib/net45/Autofac.dll": {},
         "../../packages/HtmlAgilityPack.1.4.9.5/lib/Net45/HtmlAgilityPack.dll": {},
         "../../packages/Newtonsoft.Json.9.0.1/lib/net45/Newtonsoft.Json.dll": {},
-        "bin/Debug/Business.CodeExecution.dll": {}
+        "bin/Release/Business.CodeExecution.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Business.CodeExecution.pdb": {
+        "bin/Release/Business.CodeExecution.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -123,44 +124,15 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Business.Identity.dll": {}
+        "bin/Release/Business.Identity.dll": {}
       },
       "runtime": {
         "../../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
         "../../packages/Microsoft.AspNet.Identity.Core.2.2.1/lib/net45/Microsoft.AspNet.Identity.Core.dll": {},
-        "bin/Debug/Business.Identity.dll": {}
+        "bin/Release/Business.Identity.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Business.Identity.pdb": {
-          "buildAction": "None",
-          "codeLanguage": "any",
-          "copyToOutput": true
-        }
-      }
-    },
-    "Business.SearchIndex/1.0.0": {
-      "type": "project",
-      "framework": ".NETFramework,Version=v4.6",
-      "compile": {
-        "bin/Debug/Business.SearchIndex.dll": {}
-      },
-      "runtime": {
-        "../../packages/Antlr.3.4.1.9004/lib/Antlr3.Runtime.dll": {},
-        "../../packages/AutoMapper.5.2.0/lib/net45/AutoMapper.dll": {},
-        "../../packages/Lucene.Net.3.0.3/lib/NET40/Lucene.Net.dll": {},
-        "../../packages/Microsoft.AspNet.Razor.3.2.3/lib/net45/System.Web.Razor.dll": {},
-        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.Helpers.dll": {},
-        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Deployment.dll": {},
-        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.Razor.dll": {},
-        "../../packages/Microsoft.AspNet.WebPages.3.2.3/lib/net45/System.Web.WebPages.dll": {},
-        "../../packages/Microsoft.Web.Infrastructure.1.0.0.0/lib/net40/Microsoft.Web.Infrastructure.dll": {},
-        "../../packages/Newtonsoft.Json.9.0.1/lib/net45/Newtonsoft.Json.dll": {},
-        "../../packages/SharpZipLib.0.86.0/lib/20/ICSharpCode.SharpZipLib.dll": {},
-        "../../packages/WebGrease.1.5.2/lib/WebGrease.dll": {},
-        "bin/Debug/Business.SearchIndex.dll": {}
-      },
-      "contentFiles": {
-        "bin/Debug/Business.SearchIndex.pdb": {
+        "bin/Release/Business.Identity.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -171,15 +143,15 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Data.Challenges.dll": {}
+        "bin/Release/Data.Challenges.dll": {}
       },
       "runtime": {
         "../../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.SqlServer.dll": {},
         "../../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.dll": {},
-        "bin/Debug/Data.Challenges.dll": {}
+        "bin/Release/Data.Challenges.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Data.Challenges.pdb": {
+        "bin/Release/Data.Challenges.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -190,14 +162,14 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Data.Common.dll": {}
+        "bin/Release/Data.Common.dll": {}
       },
       "runtime": {
         "../../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.dll": {},
-        "bin/Debug/Data.Common.dll": {}
+        "bin/Release/Data.Common.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Data.Common.pdb": {
+        "bin/Release/Data.Common.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -208,17 +180,17 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Data.Identity.dll": {}
+        "bin/Release/Data.Identity.dll": {}
       },
       "runtime": {
         "../../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.SqlServer.dll": {},
         "../../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.dll": {},
         "../../packages/Microsoft.AspNet.Identity.Core.2.2.1/lib/net45/Microsoft.AspNet.Identity.Core.dll": {},
         "../../packages/Microsoft.AspNet.Identity.EntityFramework.2.2.1/lib/net45/Microsoft.AspNet.Identity.EntityFramework.dll": {},
-        "bin/Debug/Data.Identity.dll": {}
+        "bin/Release/Data.Identity.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Data.Identity.pdb": {
+        "bin/Release/Data.Identity.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
