Added Challenge Details page.

--- a/Business/Challenges/Business.Challenges.csproj
+++ b/Business/Challenges/Business.Challenges.csproj
@@ -108,6 +108,11 @@
     <Compile Include="Private\SearchStrategies\SectionSearchStrategy.cs" />
     <Compile Include="Private\SearchStrategies\TagsSearchStrategy.cs" />
     <Compile Include="Private\SearchStrategies\TitleSearchStrategy.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\ChallengeDetailsModel.cs" />
     <Compile Include="ViewModels\ChallengeSearchType.cs" />
     <Compile Include="ViewModels\ChallengeSolveResult.cs" />
@@ -154,6 +159,12 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
