add component links

--- a/Presentation/Web/appsettings.json
+++ b/Presentation/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "HangfireConnection": "Data Source=DMITRIEVN2;Initial Catalog=CC_Identity;Integrated Security=True;Pooling=False"
+        "HangfireConnection": "Data Source=Nikita-PC;Initial Catalog=CC_Identity;Integrated Security=True;Pooling=False"
     },
     "JwtIssuerOptions": {
         "Issuer": "ChallengingChallenges",
